# Cpp_Progs

0 fun/1.1 DumbAI/: CMakeLists.txt  Vocabulary.cpp  Vocabulary.hpp  main.cpp
0. Папка для информации/1 дз на отправку/: 2.2 Romanian.cpp
0. Папка для информации/2 дз на отправку/: PersonalTask.cpp  PersonalTask.odt
0. Папка для информации/4 дз на отправку/: Arrays.cpp  README.txt
0.01 Test (Nothing Important at all)/0.01 Test (Nothing Important at all)/: 0.01 Test (Nothing Important at all).vcxproj.filters
0.01 Test (Nothing Important at all)/Debug/: 0.01 Test (Nothing Important at all).ilk
0.1Tester/0.1Tester/: 0.1Tester.cpp
0.1Tester/Debug/: 0.1Tester.ilk
0.2 ClionTest/: CMakeLists.txt  main.cpp
1 semester/0.01 Test (Nothing Important at all)/: 0.01 Test (Nothing Important at all).sln
1 semester/0.1Tester/: 0.1Tester.sln
1 semester/3.1 5 личное задание/: 3.1 5 личное задание.sln
1 semester/4.2 Простое число/: 4.2 Простое число.sln
1 semester/9.1 Classes/: main.cpp  (+2 more)
1 семестр/9.1 Classes/: CMakeLists.txt  таблица.txt
1.1 Вороны/: Вороны.sln
2 semester/: 6.1 Final Task.zipp
2 semester/7.1 I2C-slave/: CMakeLists.txt  I2CSlaveController.cpp  I2CSlaveController.h  I2CSlaveControllerTest.cpp  I2CSlaveControllerTest.h  main.cpp
3.0 Последовательность целых чисел/: 3.0 Последовательность целых чисел.sln
4.3 Ряды Тейлора/: 4.3 Ряды Тейлора.sln
6.1 Строки/: 6.1 Строки.sln
7.1 Матрицы/: 7.1 Матрицы.sln
9.1 Classes/: Array.h  CMakeLists.txt  Cuisine.cpp  Cuisine.h  Dish.cpp  Dish.h  Exceptions.h  MyString.cpp  MyString.h  main.cpp  saves.txt
(+434 files in other folders)
